--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
     <style>
         body {
             background-color: #f0f8ff;
@@ -61,43 +59,6 @@
         #login-form, #register-form {
             max-width: 400px;
             margin: 0 auto;
-        }
-        .about-section, .contact-section {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .about-image {
-            width: 200px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        .social-icons {
-            font-size: 24px;
-        }
-
-        .social-icons a {
-            color: #007bff;
-            margin: 0 10px;
-            transition: color 0.3s ease;
-        }
-
-        .social-icons a:hover {
-            color: #0056b3;
-        }
-
-        .contact-info {
-            background-color: #f8f9fa;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        .contact-form .form-control {
-            margin-bottom: 15px;
         }
     </style>
 </head>
@@ -163,12 +124,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#" data-page="goals">Goals</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" data-page="about">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" data-page="contact">Contact Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#" data-page="profile">Profile</a>
@@ -342,66 +297,216 @@
                     </div>
                 </div>
             </div>
-            <div id="about-page" style="display: none;">
-    <h2 class="mb-4 text-center">About Us</h2>
-    <div class="about-section">
-        <div class="card">
-            <div class="card-body text-center">
-                <img src="https://placeholder.com/200x200" alt="Vaishnavi Raj" class="about-image">
-                <h3>Vaishnavi Raj</h3>
-                <p class="text-muted">Passionate Web Developer</p>
-                <p>Hello! I'm Vaishnavi Raj, the creator of FitTrack Pro. I'm currently in my third year of graduation and I'm passionate about web development and technology. I love staying up-to-date with the latest tech trends and applying them to create useful applications like this fitness tracker.</p>
-                <p>My goal with FitTrack Pro is to help people achieve their fitness goals by providing an easy-to-use, comprehensive fitness tracking solution. I believe that technology can play a crucial role in improving our health and wellbeing, and I'm excited to be part of that journey.</p>
-                <div class="social-icons mt-3">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-            <div id="contact-page" style="display: none;">
-    <h2 class="mb-4 text-center">Contact Us</h2>
-    <div class="contact-section">
-        <div class="row">
-            <div class="col-md-6 mb-4">
-                <div class="contact-info">
-                    <h3>Get in Touch</h3>
-                    <p>We'd love to hear from you! Whether you have questions, feedback, or just want to say hello, feel free to reach out to us.</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fas fa-envelope me-2"></i> vaishnaviraj950@gmail.com</li>
-                        <li><i class="fas fa-phone me-2"></i> +91 9876543210</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="card-title">Send us a Message</h3>
-                        <form id="contact-form" class="contact-form">
-                            <div class="mb-3">
-                                <label for="contact-name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="contact-name" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="contact-email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="contact-email" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="contact-message" class="form-label">Message</label>
-                                <textarea class="form-control" id="contact-message" rows="4" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Send Message</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Simulated user data (replace with actual backend integration)
+        let currentUser = null;
+        const users = [];
+        let activities = [];
+        let goals = [];
+
+        // DOM Elements
+        const authContainer = document.getElementById('auth-container');
+        const appContainer = document.getElementById('app-container');
+        const loginForm = document.getElementById('login-form');
+        const registerForm = document.getElementById('register-form');
+        const logoutBtn = document.getElementById('logout-btn');
+        const navLinks = document.querySelectorAll('.nav-link');
+        const activityForm = document.getElementById('activity-form');
+        const activitiesList = document.getElementById('activities-list');
+        const goalForm = document.getElementById('goal-form');
+        const goalsList = document.getElementById('goals-list');
+        const goalsListPage = document.getElementById('goals-list-page');
+        const profileForm = document.getElementById('profile-form');
+
+        // Helper Functions
+        function showPage(pageId) {
+            document.querySelectorAll('[id$="-page"]').forEach(page => page.style.display = 'none');
+            document.getElementById(pageId).style.display = 'block';
+        }
+
+        function updateNavigation() {
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                if (link.getAttribute('data-page') === currentPage) {
+                    link.classList.add('active');
+                }
+            });
+        }
+
+        // Authentication
+        loginForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const email = document.getElementById('login-email').value;
+            const password = document.getElementById('login-password').value;
+            const user = users.find(u => u.email === email && u.password === password);
+            if (user) {
+                currentUser = user;
+                authContainer.style.display = 'none';
+                appContainer.style.display = 'block';
+                showPage('dashboard-page');
+                updateDashboard();
+            } else {
+                alert('Invalid credentials');
+            }
+        });
+
+        registerForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const name = document.getElementById('register-name').value;
+            const email = document.getElementById('register-email').value;
+            const password = document.getElementById('register-password').value;
+            if (users.some(u => u.email === email)) {
+                alert('Email already registered');
+            } else {
+                const newUser = { name, email, password, weight: 0, height: 0 };
+                users.push(newUser);
+                currentUser = newUser;
+                authContainer.style.display = 'none';
+                appContainer.style.display = 'block';
+                showPage('dashboard-page');
+                updateDashboard();
+            }
+        });
+
+        logoutBtn.addEventListener('click', () => {
+            currentUser = null;
+            authContainer.style.display = 'block';
+            appContainer.style.display = 'none';
+        });
+
+        // Navigation
+        navLinks.forEach(link => {
+            link.addEventListener('click', (e) => {
+                e.preventDefault();
+                const pageId = e.target.getAttribute('data-page') + '-page';
+                showPage(pageId);
+                updateNavigation();
+            });
+        });
+
+        // Activity Tracking
+        activityForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const type = document.getElementById('activity-type').value;
+            const duration = parseInt(document.getElementById('activity-duration').value);
+            const calories = parseInt(document.getElementById('activity-calories').value);
+            const activity = { type, duration, calories, date: new Date() };
+            activities.push(activity);
+            updateActivitiesList();
+            updateDashboard();
+            activityForm.reset();
+        });
+
+        function updateActivitiesList() {
+            activitiesList.innerHTML = '';
+            activities.slice().reverse().forEach(activity => {
+                const li = document.createElement('li');
+                li.className = 'list-group-item';
+                li.innerHTML = `
+                    <strong>${activity.type}</strong> - ${activity.duration} minutes, ${activity.calories} calories
+                    <small class="text-muted">${activity.date.toLocaleString()}</small>
+                `;
+                activitiesList.appendChild(li);
+            });
+        }
+
+        // Goal Setting
+        goalForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const type = document.getElementById('goal-type').value;
+            const target = parseInt(document.getElementById('goal-target').value);
+            const deadline = document.getElementById('goal-deadline').value;
+            const goal = { type, target, deadline, progress: 0 };
+            goals.push(goal);
+            updateGoalsList();
+            updateDashboard();
+            goalForm.reset();
+        });
+
+        function updateGoalsList() {
+            goalsList.innerHTML = '';
+            goalsListPage.innerHTML = '';
+            goals.forEach(goal => {
+                const li = document.createElement('li');
+                li.className = 'list-group-item';
+                li.innerHTML = `
+                    <strong>${goal.type}</strong> - Target: ${goal.target}, Deadline: ${goal.deadline}
+                    <div class="progress mt-2">
+                        <div class="progress-bar" role="progressbar" style="width: ${goal.progress}%;" 
+                             aria-valuenow="${goal.progress}" aria-valuemin="0" aria-valuemax="100">
+                            ${goal.progress}%
+                        </div>
+                    </div>
+                `;
+                goalsList.appendChild(li.cloneNode(true));
+                goalsListPage.appendChild(li);
+            });
+        }
+
+        // Profile Management
+        profileForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            currentUser.name = document.getElementById('profile-name').value;
+            currentUser.email = document.getElementById('profile-email').value;
+            currentUser.weight = parseFloat(document.getElementById('profile-weight').value);
+            currentUser.height = parseInt(document.getElementById('profile-height').value);
+            updateDashboard();
+            alert('Profile updated successfully');
+        });
+
+        // Dashboard
+        function updateDashboard() {
+            // Update activity chart
+            const activityChart = new Chart(document.getElementById('activity-chart'), {
+                type: 'bar',
+                data: {
+                    labels: activities.slice(-7).map(a => a.type),
+                    datasets: [{
+                        label: 'Calories Burned',
+                        data: activities.slice(-7).map(a => a.calories),
+                        backgroundColor: 'rgba(75, 192, 192, 0.6)'
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+
+            // Update goals progress
+            updateGoalsList();
+
+            // Update profile stats
+            const statsChart = new Chart(document.getElementById('stats-chart'), {
+                type: 'line',
+                data: {
+                    labels: ['Week 1', 'Week 2', 'Week 3', 'Week 4'],
+                    datasets: [{
+                        label: 'Weight (kg)',
+                        data: [currentUser.weight, currentUser.weight - 0.5, currentUser.weight - 1, currentUser.weight - 1.5],
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        tension: 0.1
+                    }]
+                }
+            });
+
+            // Populate profile form
+            document.getElementById('profile-name').value = currentUser.name;
+            document.getElementById('profile-email').value = currentUser.email;
+            document.getElementById('profile-weight').value = currentUser.weight;
+            document.getElementById('profile-height').value = currentUser.height;
+        }
+
+        // Initial setup
+        showPage('dashboard-page');
+        updateNavigation();
+    </script>
 </body>
 </html>
