--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <div class="about-section">
         <div class="card">
             <div class="card-body text-center">
-                <img src="https://placeholder.com/200x200" alt="Vaishnavi Raj" class="about-image">
+                <img src="gitprofile.jpg" alt="Vaishnavi Raj" class="about-image">
                 <h3>Vaishnavi Raj</h3>
                 <p class="text-muted">Passionate Web Developer</p>
                 <p>Hello! I'm Vaishnavi Raj, the creator of FitTrack Pro. I'm currently in my third year of graduation and I'm passionate about web development and technology. I love staying up-to-date with the latest tech trends and applying them to create useful applications like this fitness tracker.</p>
